Add basic structure for 1st section.
Adding structure that fits the exercise for c1.
Amended colours to match my decided theme of the
A Team! I aint getting on no plane!

--- a/index.html
+++ b/index.html
@@ -10,18 +10,35 @@
     <div class="header">
         This is my Header
     </div>
+    
     <div class="content">
         <div class="c1">
-            This is content pane 1
+            <div class="contentbox">
+                <div class="left">
+                    <h1>Main Header</h1>
+                    <p class="std">reasonably verbose paragraph underneath. The quick brown fox jumps over the lazy dog.</p>
+                    <button>Sign Up</button>
+                </div>
+                <div class="right">
+                    <img src="https://picsum.photos/200/300" alt="placeholder image">
+                </div>
+            </div>
         </div>
+
         <div class="c2">
-            This is content pane 2
+            <div class="contentbox">
+                This is content pane 2
+            </div>
         </div>
         <div class="c3">
-            This is content pane 3
+            <div class="contentbox">
+                This is content pane 3
+            </div>
         </div>
         <div class="c4">
-            This is content pane 4
+            <div class="contentbox">
+                This is content pane 4
+            </div>
         </div>
     </div>
     <div class="footer">
