Remove outer content containers.
I'd initially added outer containers for the 4 sections, to then line
up the content in the inner containers. This didn't look like it was
ideal as outer containers were being re-sized. Updating to remove this,
we'll see if this works better.
Slight text edits, closer towards what I'll have in final version.

--- a/index.html
+++ b/index.html
@@ -3,43 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nostalgia Fueled Test Site</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
-        This is my Header
+        I didn't actually watch the A Team, I was slightly too young. It still permeated pop culture for a bit though hence.....
     </div>
     
     <div class="content">
-        <div class="c1">
-            <div class="contentbox">
+            <div class="contentbox c1">
                 <div class="left">
-                    <h1>Main Header</h1>
-                    <p class="std">reasonably verbose paragraph underneath. The quick brown fox jumps over the lazy dog.</p>
+                    <h1>THE A TEAM</h1>
+                    <p class="std">In 1972, a crack commando unit was sent to prison by a military court for a crime they didn't commit. These men promptly escaped from a maximum security stockade to the Los Angeles underground. Today, still wanted by the government they survive as soldiers of fortune. If you have a problem, if no one else can help, and if you can find them....maybe you can hire The A-Team.</p>
                     <button>Sign Up</button>
                 </div>
                 <div class="right">
-                    <img src="https://picsum.photos/200/300" alt="placeholder image">
+                    <img src="https://picsum.photos/300/200" alt="placeholder image">
                 </div>
             </div>
-        </div>
-
-        <div class="c2">
-            <div class="contentbox">
+            <div class="contentbox c2">
                 This is content pane 2
             </div>
-        </div>
-        <div class="c3">
-            <div class="contentbox">
+            <div class="contentbox c3">
                 This is content pane 3
             </div>
-        </div>
-        <div class="c4">
-            <div class="contentbox">
+            <div class="contentbox c4">
                 This is content pane 4
             </div>
-        </div>
     </div>
     <div class="footer">
         This is my Footer
