Add Basic Format for section 2-4
Added the HTML sections as I think will work. I need to play around
with the css a fair bit now and possibly standardise each section.
May need to add more flex.
Hopefully it's mainly tweaking now the skeleton is set out! We'll see.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,37 @@
                 </div>
             </div>
             <div class="contentbox c2">
-                This is content pane 2
+                <div class="c2box">
+                    <img src="https://picsum.photos/150/150" alt="Square placeholder image">
+                    <p>Here's one of the square boxe 1</p>
+                </div>
+                <div class="c2box">
+                    <img src="https://picsum.photos/150/150" alt="Square placeholder image">
+                    <p>Here's another of the square boxes 2</p>
+                </div>
+                <div class="c2box">
+                    <img src="https://picsum.photos/150/150" alt="Square placeholder image">
+                    <p>Here's yet another of the square boxes 3</p>
+                </div>
+                <div class="c2box">
+                    <img src="https://picsum.photos/150/150" alt="Square placeholder image">
+                    <p>Here's the final of the square boxes 4</p>
+                </div>
             </div>
             <div class="contentbox c3">
-                This is content pane 3
+                <p class="quote">I love it when a plan comes together! Join B A Baracus, Murdock, Hanibal, and the other guy as they save orphanages and shit. I honestly am not really sure. I aint getting on no plane! Fuck Yeah.</p>
+                <p class="person">-Fernando Suave</p>
             </div>
             <div class="contentbox c4">
-                This is content pane 4
+                <div class="innerbox">
+                    <div class="left">
+                        <p class="top">Register your interest....in the A Team!</p>
+                        <p class="bottom">You won't regret it!</p>
+                    </div>
+                    <div class="right">
+                        <button>Sign Up!</button>
+                    </div>
+                </div>
             </div>
     </div>
     <div class="footer">
