--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
             <div class="contentbox c2">
                 <div class="c2box">
                     <img src="https://picsum.photos/150/150" alt="Square placeholder image">
-                    <p>Here's one of the square boxe 1</p>
+                    <p>Bodie</p>
                 </div>
                 <div class="c2box">
                     <img src="https://picsum.photos/150/150" alt="Square placeholder image">
-                    <p>Here's another of the square boxes 2</p>
+                    <p>Doyle</p>
                 </div>
                 <div class="c2box">
                     <img src="https://picsum.photos/150/150" alt="Square placeholder image">
-                    <p>Here's yet another of the square boxes 3</p>
+                    <p>Tiger</p>
                 </div>
                 <div class="c2box">
                     <img src="https://picsum.photos/150/150" alt="Square placeholder image">
-                    <p>Here's the final of the square boxes 4</p>
+                    <p>The Jewelry Man</p>
                 </div>
             </div>
             <div class="contentbox c3">
-                <p class="quote">I love it when a plan comes together! Join B A Baracus, Murdock, Hanibal, and the other guy as they save orphanages and shit. I honestly am not really sure. I aint getting on no plane! Fuck Yeah.</p>
+                <p class="quote">I love it when a plan comes together! Join B A Baracus, Murdock, Hanibal, and the other guy as they save orphanages and shit. I am honestly not really sure. I aint getting on no plane! Fuck Yeah.</p>
                 <p class="person">-Fernando Suave</p>
             </div>
             <div class="contentbox c4">
