Add main font and images.
Done:
-Learnt how to grab fonts from google. Main CSS seems to need to be
before the font code or it won't recognise it.
-Found royalty free images of the A team, and cropped it horribly.

To-Do:
- Need to find one more image.
- Re-Designing whole site to flex.
- Possibly replace coloured sections with single camo image background
as it looks awful currently. Would need to visually keep them distinct
another way instead.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nostalgia Fueled Test Site</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
@@ -14,8 +17,8 @@
     <div class="content">
             <div class="contentbox c1">
                 <div class="left">
-                    <h1>THE A TEAM</h1>
-                    <p class="std">In 1972, a crack commando unit was sent to prison by a military court for a crime they didn't commit. These men promptly escaped from a maximum security stockade to the Los Angeles underground. Today, still wanted by the government they survive as soldiers of fortune. If you have a problem, if no one else can help, and if you can find them....maybe you can hire The A-Team.</p>
+                    <h1 class="left-item">THE A TEAM</h1>
+                    <p class="std left-item">In 1972, a crack commando unit was sent to prison by a military court for a crime they didn't commit. These men promptly escaped from a maximum security stockade to the Los Angeles underground. Today, still wanted by the government they survive as soldiers of fortune. If you have a problem, if no one else can help, and if you can find them....maybe you can hire The A-Team.</p>
                     <button>Sign Up</button>
                 </div>
                 <div class="right">
@@ -24,19 +27,19 @@
             </div>
             <div class="contentbox c2">
                 <div class="c2box">
-                    <img src="https://picsum.photos/150/150" alt="Square placeholder image">
+                    <img src="./Images/Faceman.jpg" alt="Faceman">
                     <p>Bodie</p>
                 </div>
                 <div class="c2box">
-                    <img src="https://picsum.photos/150/150" alt="Square placeholder image">
+                    <img src="./Images/Murdoch.jpg" alt="Murdoch">
                     <p>Doyle</p>
                 </div>
                 <div class="c2box">
-                    <img src="https://picsum.photos/150/150" alt="Square placeholder image">
+                    <img src="./Images/Hannibal.jpg" alt="Hanibal">
                     <p>Tiger</p>
                 </div>
                 <div class="c2box">
-                    <img src="https://picsum.photos/150/150" alt="Square placeholder image">
+                    <img src="./Images/BAB.jpg" alt="BA Baracus">
                     <p>The Jewelry Man</p>
                 </div>
             </div>
