Added Camo background and top adjusted to flex
This looks awful, but we can add backgrounds to content boxes
to make the sections actually readable.

--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
                         <p class="bottom">You won't regret it!</p>
                     </div>
                     <div class="right">
-                        <button>Sign Up!</button>
+                        <button>Sign Up</button>
                     </div>
                 </div>
             </div>
     </div>
     <div class="footer">
-        This is my Footer
+        A Team photos from <a href="https://www.defense.gov/Multimedia/Photos/igphoto/2002935849/">US department of defense, credit: Gary Null</a>,
+        Camo Backgrounds by <a href="https://pixabay.com/users/david_uy-2175126/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5405943">David Uy from pixabay</a>
     </div>
 </body>
 </html>
